objects/CZMaxsafeAllocationDetails__c.object
<CustomObject>
    <description>Maxsafe Allocation Details</description>
    <fields>
        <fullName>AllocationAmount__c</fullName>
        <description>Allocation Amount</description>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllocationType__c</fullName>
        <description>Allocation Type</description>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increase Allocation</fullName>
                </value>
                <value>
                    <fullName>Decrease Allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Reference to Application field</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>MaxsafeAllocationDetailse</relationshipLabel>
        <relationshipName>CZMaxsafeAllocationDetailses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>Brand Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete Max Allocation used for UI and SF integration</description>
        <label>Delete Max Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Selected</description>
        <label>Is Selected ?</label>
        <type>Checkbox</type>
    </fields>
    <label>MaxsafeAllocationDetails</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxsafeAllocationDetails</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MaxsafeAllocationDetailses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>